examples/test/testpolicy998.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy998
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key35: value4
      key44: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value33
      podSelector:
        matchLabels:
          key26: value6
          key33: value25
          key25: value4
